[tool.ruff]
exclude = [
  ".git",
  "venv",
  "dist",
  "sdist"
]
line-length = 130
indent-width = 2
respect-gitignore = true


[tool.ruff.lint]
select = ["E", "F", "W", "YTT", "BLE", "A", "COM", "PT", "Q", "RET", "ARG", "RUF"]
ignore = ["RUF012", "COM812","RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pdm.package-dir]
pylint_junit = "src/"

[project]
name = "pylint_junit"
version = "0.4.0"
description = "Pylint plugin that generates JUnit based report that can be consumed by CI environments like Jenkins, Azure Devops and such."
readme = "README.md"
authors = [
    {name = "Jani Mikkonen", email = "jani.mikkonen@gmail.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "pylint",
    "junit-xml-2",
]
license = {text = "GPLV3"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/rasjani/pylint_junit"
Documentation = "https://github.com/rasjani/pylint_junit/blob/master/README.md"
Repository = "https://github.com/rasjani/pylint_junit.git"
"Bug Tracker" = "https://github.com/rasjani/pylint_junit/issues"
Changelog = "https://github.com/rasjani/pylint_junit/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "invoke",
  "pdm",
  "ruff"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

